--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.8.7",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
     "localforage": "^1.10.0",
@@ -21,6 +22,7 @@
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.20.0",
     "sort-by": "^1.2.0"
   },
