--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.0",
     "@tanstack/react-query": "^5.8.7",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
     "localforage": "^1.10.0",
