--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@mui/x-charts": "^6.18.2",
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.0",
     "@tanstack/react-query": "^5.8.7",
@@ -26,7 +27,6 @@
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
-    "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.20.0",
     "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
